kubernetes/apps/servarr/seerr/app/ingressroute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app seerr
  labels:
    app.kubernetes.io/name: *app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`seerr.${domain}.${tld}`)
      kind: Rule
      services:
        - kind: Service
          name: *app
          port: 5055
      middlewares:
        - name: forward-auth
          namespace: traefik
    - match: Host(`requests.${domain}.${tld}`)
      kind: Rule
      services:
        - kind: Service
          name: *app
          port: 5055
      middlewares:
        - name: forward-auth
          namespace: traefik
